# scripture

./: AUTHORS  CMakeLists.txt  README.md
data/: biblenow.desktop  com.github.jendamarek.scripture.appdata.xml  com.github.jendamarek.scripture.desktop  scripture.desktop
schemas/: com.github.jendamarek.biblenow.gschema.xml  com.github.jendamarek.scripture.gschema.xml
src/: Controller.vala  Main.vala  Window.vala
src/Controllers/: ReadingPosition.vala  Settings.vala
src/Dialogs/: ImportDialog.vala  PreferencesDialog.vala  SettingsDialog.vala  TranslationsDialog.vala
src/Model/: Bible.vala  Book.vala  BookPrototype.vala  Chapter.vala  Database.vala  Language.vala  QueryBuilder.vala  Transaction.vala  Verse.vala
src/Model/Database/: Create.vala  Database.vala  QueryBuilder.vala  Transaction.vala
src/Views/: ParallelView.vala  ReadView.vala  SingleView.vala
src/Widgets/: AppMenu.vala  BibleReadView.vala  BibleSelect.vala  BookSelect.vala  ChapterSelect.vala  ParallelView.vala  ReadingArea.vala  SettingsCombo.vala  TranslationItem.vala  TranslationsList.vala
src/Widgets/Styles/: App.vala  View.vala
